# saturn

./: .env-template  .gitignore  .gitmodules  DEPENDENCY_GUIDE.md  LICENSE  MANIFEST.in  Makefile  README.md  SUMMARY_FILE_BUILD_LLM_TOOLS.md  cli.py  config.yaml  go.mod  index.js  pyproject.toml  requirements.txt  saturn_run_state.json
.github/workflows/: python-tests.yml
api/: README.md
api_defs/run_v2/: tools.json
cmd/: README.md
configs/: README.md
docs/: FILE_BUILD_TOOLING.md  LLM_INTEGRATION_GUIDE.md  TERRAFORM_HCL_INTEGRATION_SUMMARY.md  WINDOWS_LONG_PATH_FIX.md
embeddings_env/: pyvenv.cfg
examples/: README.md  demo_file_build_tooling.py  integration_example.py  rag_with_reranking.py
examples/db/chroma_db/4120ffa4-77f9-4de6-9d28-c1b87d108695/: index_metadata.pickle
gcp_nl_cli/: gcp_executor.py  openai_interface.py
githooks/: README.md  install-hooks.sh  pre-commit  pre-push
internal/: README.md  state_machine_runner.py  state_recorder.py
internal/assets/: asset-scan.py  asset_metadata.json  assets.duckdb  graphrag_asset_manager.py  graphrag_engine.py  graphrag_system.py  hybrid_graph_manager.py  scan.py  vidhra-eb3e8152e0a2.json
internal/assets/gcp_graph_data/: nodes.json  relationships.json
internal/ast/: astextract.py  astextract_types.py  astextractall.py  astpy.py  extracted_async_client_methods.json  extracted_async_methods.json  extracted_request_classes.json
internal/ast/extracted_methods/: tools.json
internal/ast/extracted_methods/accessapproval_v1/: tools.json  types.json
internal/ast/extracted_methods/addressvalidation_v1/: tools.json  types.json
internal/ast/extracted_methods/admanager_v1/: tools.json  types.json
internal/ast/extracted_methods/admin_v1alpha/: tools.json  types.json
internal/ast/extracted_methods/admin_v1beta/: tools.json  types.json
internal/ast/extracted_methods/advisorynotifications_v1/: tools.json  types.json
internal/ast/extracted_methods/alloydb_v1/: tools.json  types.json
internal/ast/extracted_methods/alloydb_v1alpha/: tools.json  types.json
internal/ast/extracted_methods/alloydb_v1beta/: tools.json  types.json
internal/ast/extracted_methods/api_keys_v2/: tools.json  types.json
internal/ast/extracted_methods/apigateway_v1/: tools.json  types.json
internal/ast/extracted_methods/apigee_registry_v1/: tools.json  types.json
internal/ast/extracted_methods/apigeeconnect_v1/: tools.json  types.json
internal/ast/extracted_methods/apihub_v1/: types.json
internal/ast/extracted_methods/appengine_admin_v1/: tools.json  types.json
internal/ast/extracted_methods/appengine_logging_v1/: tools.json  types.json
internal/ast/extracted_methods/apphub_v1/: tools.json  types.json
internal/ast/extracted_methods/areainsights_v1/: tools.json  types.json
internal/ast/extracted_methods/artifactregistry_v1/: tools.json  types.json
internal/ast/extracted_methods/artifactregistry_v1beta2/: tools.json  types.json
internal/ast/extracted_methods/asset_v1/: tools.json  types.json
internal/ast/extracted_methods/asset_v1p1beta1/: tools.json  types.json
internal/dag/: dag.py  dag_test.py
internal/states/: __init__.py  base_state.py  completed_state.py  error_handling_state.py  executing_state.py  failed_state.py  planning_state.py  processing_results_state.py  reasoning_state.py  start_state.py  terraform_state.py  tool_selection_state.py
internal/tools/: doc_ext_aws.py  ingest_aws_docs_to_chromadb.py  ingest_docs_to_ragflow.py  ingest_gcloud_docs_to_chromadb.py  ingest_multi_provider_docs.py  rag_query_gcloud_docs.py  test_context_aware_parsing.py
internal/tools/aws_cli_docs_markdown/: index.md
internal/tools/gcloud_online_docs_markdown/: index.md
internal/tools/gcloud_online_docs_markdown_v2/: index.md
logs/: 20250520_142306_584e8d7a.json  saturn_run_list_all_available_compute_instances__20250520_142041_e25de4df.json  saturn_run_list_all_available_compute_instances__20250520_142215_c2a13689.json
model/llm/: base_interface.py  claude_llm.py  gemini_llm.py  mistral_llm.py  openai_llm.py
model/openai/: call.py  formatted_tools.json  formatted_tools_debug.json  raw_call.py
model/openai/billing_v1/: tools.json  types.json
model/openai/cloudbuild_v1/: tools.json  types.json
model/openai/functions_v1/: types.json
model/openai/functions_v2/: tools.json  types.json
model/testing/: error_agent.py  k.json  raw_call.py  test.py
model/testing/env/: pyvenv.cfg
model/testing/functions_v2/: js.json  tools.json
model/testing/vpcaccess_v1/: tools.json  types.json
model/xlam/: .gitignore  xlam_call.py
pkg/: README.md
planning/: init.md
saturn/: aws_executor.py  cli.py  config.py  file_build_executor.py  file_build_tools.py  file_executor.py  gcp_executor.py  hybrid_orchestrator.py  knowledge_base.py  orchestrator.py  prompts.py  rag_engine.py  terraform_executor.py  terraform_interop.py  textual_chat.py  utils.py
saturn-docs/: package.json
saturn-docs/src/app/: page.mdx
saturn-docs/src/components/: Code.tsx  Header.tsx  Resources.tsx
saturn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: README.md  fix-windows-paths.ps1
src/saturn.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test_workspace/: config.json  greeting.template  greeting.txt  requirements.txt  settings.yaml
tests/: __init__.py  conftest.py  run_all_tests.py  test_base_state.py  test_cli_env_loading.py  test_dag.py  test_dynamic_reverse_engineering.py  test_file_build_tooling.py  test_file_build_tools.py  test_graphrag_asset_manager.py  test_llm_integrations.py  test_rag_engine.py  test_rag_hyde.py  test_start_state.py  test_state_machine_runner.py
tests/data/: sample_assets.md
tests/db/chroma_db/: chroma.sqlite3
tests/examples/: demo_file_build_tooling.py  integration_example.py
tests/test_db/chroma_test/: chroma.sqlite3
web/: README.md  package.json  tailwind.config.ts
web/components/auth/: index.tsx
web/components/sidebar/: Sidebar.tsx
web/styles/: globals.css
web/supabase/: .gitignore
xlam/: .gitignore  xlam_call.py
(+25200 files in other folders)
