[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "saturn"
version = "0.1.0"
description = "CLI AI agent for infrastructure management and orchestration"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
readme = "README.md" # Optional
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", # Choose your license
    "Operating System :: OS Independent",
]
dependencies = [
    "openai>=1.3.0",
    "google-cloud-aiplatform>=1.38.0", 
    "anthropic>=0.50.0", 
    "mistralai>=1.0.0", 
    "google-auth>=2.0.0",
    "google-api-python-client>=2.0.0", 
    "google-cloud>=0.31.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0",
    "python-dotenv>=1.0.0",
    "typer[all]>=0.9.0",
    "json-repair>=0.19.0",
    "rich>=13.0.0",
    "toml>=0.10.2",
    # --- Core Gemini support ---
    "google-generativeai>=0.5.2",
    # --- For RAG Engine ---
    "llama-index>=0.11.00",  
    "llama-index-core>=0.11.00", 
    "llama-index-embeddings-huggingface>=0.2.0", 
    "sentence-transformers>=2.2.0",
    # --- For ChromaDB Vector Store ---
    "llama-index-vector-stores-chroma>=0.1.7",   
    "chromadb>=0.4.22", 
    # --- For DuckDB Vector Store ---
    "llama-index-vector-stores-duckdb>=0.1.5",   
    "duckdb>=0.10.1",
    "pytest-asyncio>=0.23.0"
]

[project.urls] 
"Homepage" = "https://github.com/vidhra/saturn"
"Bug Tracker" = "https://github.com/vidhar/saturn/issues"

# --- Add Script Entry Point --- 
[project.scripts]
saturn = "saturn.cli:app"
# --- End Entry Point --- 

# --- Explicitly define packages to include --- 
[tool.setuptools.packages.find]
where = ["."]  
include = ["saturn*", "model*","internal*"] 
exclude = ["tests*", "venv*", "embeddings_env*"] 

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function" 

[project.optional-dependencies]
gpu-support = ["torch>=2.0.0,<3.0.0", "torchvision>=0.15.0", "torchaudio>=2.0.0"]
